# vishing-alert

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  build.gradle  settings.gradle
NodeModule/: index.js  package.json
NodeModule/google-cloud-run/: .gitignore  package-lock.json  package.json  server.js
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/vishingalert/app/: MainActivity.kt
app/src/main/java/com/vishingalert/app/detector/: FraudDetectionEngine.kt  SpeechToTextHandler.kt  ThreatDetectionEngine.kt  ThreatKeywordDatabase.kt  VoskSpeechToTextHandler.kt
app/src/main/java/com/vishingalert/app/model/: Models.kt
app/src/main/java/com/vishingalert/app/receiver/: PhoneCallReceiver.kt  SmsReceiver.kt
app/src/main/java/com/vishingalert/app/service/: CallAudioCaptureService.kt  CallMonitoringService.kt  (+3 more)
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/test/java/com/vishingalert/app/: FraudDetectionEngineTest.kt
guardianShieldProject/: .gitignore  LICENSE  README.md  SECURITY.md  settings.gradle
guardianShieldProject/app/: build.gradle
guardianShieldProject/app/src/main/: AndroidManifest.xml
guardianShieldProject/app/src/main/assets/node_project/: bundle.js
guardianShieldProject/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
guardianShieldProject/app/src/main/res/layout/: activity_alert.xml  activity_main.xml
guardianShieldProject/app/src/main/res/values/: colors.xml  strings.xml
plan/: guardianShield2_claude.txt  implementation plan.txt
(+7 files in other folders)
